argocd/resources/agent-control-plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agent-control-plane
  annotations:
    argocd.argoproj.io/sync-wave: '-4'
